<resources>
    <string name="app_name">Food Order App</string>
    <string name="store_name">Carry Out</string>
    <string name="add_cart">Add To Cart</string>
    <string name="register">Register</string>
    <string name="hint_name">First Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="login">Log In</string>
    <string name="missing_fields">Please fill in all fields</string>
    <string name="logout">(Log Out)</string>
    <string name="main_register">Register</string>
    <string name="main_login">Sign In Here</string>
    <string name="new_user">New User?</string>
    <string name="register_to_login">Sign up here</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="price_default">$0.00</string>
    <string name="label_subtotal">subtotal:</string>
    <string name="label_discount">discount:</string>
    <string name="delivery_charge">delivery charge:</string>
    <string name="label_total">total:</string>
    <string name="show_cart_button">Show Cart</string>
    <string name="product_image_description">Product Image</string>
    <string name="button_add_to_cart">Add to Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="error_timeout">Error: Timed out fetching products</string>
    <string name="product_image_descriptor">Product Image</string>
    <string name="info_button_descriptor">Info Button</string>
    <string name="category_image_descriptor">Category Image</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="default_amount">0</string>
    <string name="add_new_address">Add New Address</string>
    <string name="house_number">House Number</string>
    <string name="street_name_hint">Street Name</string>
    <string name="city_hint">City</string>
    <string name="pin_number_hint">PIN Code</string>
    <string name="add_address">Add Address</string>
    <string name="fill_in_all">Please fill in all fields</string>
    <string name="address_type_hint">Type</string>
    <string name="delivering_to">Delivering to:</string>
    <string name="select_payement">Select Payement</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="pay_online">Pay Online</string>
    <string name="check_out">Check Out</string>
    <string name="select_address">Select Address</string>
    <string name="return_to_home_screen">Click to Return to Home Screen</string>
    <string name="edit">Edit</string>
    <string name="welcome">Welcome</string>
    <string name="save">Save</string>
    <string name="default_number">0</string>
    <string name="default_date">December 7, 1941</string>
    <string name="items_label"> items</string>
    <string name="shipping_to">Shipping to:</string>
    <string name="search_hint">Search Products</string>
    <string name="edit_address_button">Edit Address</string>
    <string name="selected_order">Selected Order</string>
    <string name="cart_prompt">Cart Prompt</string>
    <string name="default_time">00:00 AM</string>
</resources>