<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_welcome"
        android:visible="false"
        />
    <item
        android:id="@+id/menu_login"
        android:title="@string/menu_sign_in"
        />
    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/menu_cart"
        android:title=""
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout" />
</menu>