<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="@color/background"
    android:layout_marginBottom="8dp"
    android:elevation="6dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="6dp">

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_date"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_date"
            android:text="@string/price_default"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_date"
            android:layout_toEndOf="@id/text_cost"
            android:text="@string/default_amount"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/label_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_date"
            android:layout_toEndOf="@id/text_items"
            android:text="@string/items_label"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>