<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/plus_minus_widget"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_to_cart"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/layout_full"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary_desaturated"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary_desaturated"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="?android:colorBackground"
                android:gravity="center"
                android:padding="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textStyle="bold"
                android:text="@string/minus_button" />

            <TextView
                android:id="@+id/text_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/light"
                android:text="@string/default_amount"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="?android:colorBackground"
                android:gravity="center"
                android:padding="8dp"
                android:textStyle="bold"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/plus_button" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>