<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_cart_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/item_bg" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/recycler_cart_items"
                android:layout_margin="12dp"
                app:cardElevation="8dp"
                android:padding="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_subtotal"
                        style="@style/cart_text_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/price_default" />

                    <TextView
                        android:id="@+id/label_subtotal"
                        style="@style/cart_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/text_subtotal"
                        android:layout_toStartOf="@+id/text_subtotal"
                        android:text="@string/label_subtotal" />

                    <TextView
                        android:id="@+id/text_discount"
                        style="@style/cart_text_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_subtotal"
                        android:layout_alignParentEnd="true"
                        android:text="@string/price_default" />

                    <TextView
                        android:id="@+id/label_discount"
                        style="@style/cart_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/text_discount"
                        android:layout_toStartOf="@+id/text_discount"
                        android:text="@string/label_discount" />

                    <TextView
                        android:id="@+id/text_delivery"
                        style="@style/cart_text_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/text_discount"
                        android:layout_alignParentEnd="true"
                        android:text="@string/price_default" />

                    <TextView
                        android:id="@+id/label_delivery"
                        style="@style/cart_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/text_delivery"
                        android:layout_toStartOf="@+id/text_delivery"
                        android:text="@string/delivery_charge" />

                    <FrameLayout
                        android:id="@+id/divider"
                        android:layout_width="140dp"
                        android:layout_height="2dp"
                        android:layout_below="@id/text_delivery"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:background="@color/divider" />

                    <TextView
                        android:id="@+id/text_total"
                        style="@style/cart_text_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/divider"
                        android:layout_alignParentEnd="true"
                        android:text="@string/price_default" />

                    <TextView
                        android:id="@+id/label_total"
                        style="@style/cart_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/text_total"
                        android:layout_toStartOf="@+id/text_total"
                        android:text="@string/label_total" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_checkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_out" />
</LinearLayout>