<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="?android:colorBackground"
    android:padding="8dp">

    <ImageView
        android:id="@+id/image_product"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="3dp"
        android:layout_marginEnd="6dp"
        android:contentDescription="@string/product_image_descriptor"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/info_button_descriptor"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        android:id="@+id/barrier_text"
        app:constraint_referenced_ids="text_description,text_price" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/image_product"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_price"
        android:textSize="16sp"
        android:text="Title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintBottom_toTopOf="@id/text_description"
        app:layout_constraintEnd_toStartOf="@id/frame_button"
        app:layout_constraintHorizontal_bias="0.0"
        android:text="@string/price_default"
        app:layout_constraintStart_toEndOf="@id/image_product"
        />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_price"
        android:layout_toEndOf="@id/image_product"
        app:layout_constraintEnd_toStartOf="@id/frame_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/image_product"
        app:layout_constraintTop_toBottomOf="@id/text_price"
        app:layout_constraintBottom_toBottomOf="parent"
        android:maxLines="2" />
    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toEndOf="@id/barrier_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/frame_button"
        >
        <include layout="@layout/plus_minus_button"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>